--- a/XamarinApp/XamarinApp/XamarinApp.Android/Properties/AndroidManifest.xml
+++ b/XamarinApp/XamarinApp/XamarinApp.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="XamarinApp.Android">
+	<application android:icon="@drawable/CapfinLogo" android:label="Capfin HubCap">
     android:largeHeap="true"
   </application>
 </manifest>
